<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_activity_update_objective"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UpdateObjectiveActivity">

    <!--Title-->
    <EditText
        android:id="@+id/update_objective_title"
        style="@style/objective_edit_text_style"
        android:hint="@string/hint_objective_title"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill" />

    <!--Description-->
    <EditText
        android:id="@+id/update_objective_description"
        style="@style/objective_edit_text_style"
        android:hint="@string/hint_objective_description"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_objective_title"
        tools:ignore="Autofill" />

    <!--Due Date label-->
    <TextView
        android:id="@+id/update_objective_due_date_label"
        style="@style/objective_text_view_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hint_objective_due_date"
        app:layout_constraintEnd_toEndOf="@+id/update_objective_due_date"
        app:layout_constraintStart_toStartOf="@+id/update_objective_due_date"
        app:layout_constraintTop_toBottomOf="@+id/update_objective_description" />

    <!--Due Date-->
    <DatePicker
        android:id="@+id/update_objective_due_date"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/hint_objective_due_date"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/update_objective_submit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_objective_due_date_label" />

    <!--Add objective-->
    <Button
        android:id="@+id/update_objective_submit_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/submit_button_margin"
        android:layout_marginEnd="@dimen/submit_button_margin"
        android:text="@string/text_update_objective"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>