<resources>
    <string name="app_name">My Personal Manager</string>
    <string name="desc_add_objective">Adds  a new objective.</string>
    <string name="hint_objective_title">enter title for objective</string>
    <string name="hint_objective_description">enter description for objective</string>
    <string name="hint_objective_due_date">enter due date for objective</string>
    <string name="text_add_objective">Add Objective</string>
    <string name="text_update_objective">Update Objective</string>
    <string name="text_delete_objectives">Delete Objectives</string>
    <string name="text_delete_objective">Delete Objective</string>
    <string name="text_about_app">About App</string>
    <string name="dialog_msg_delete_objectives">All your objectives will be removed from memory. Are you sure?</string>
    <string name="dialog_msg_delete_objective">The selected objective will be removed from memory. Are you sure?</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="validation_title_empty">Title must not be empty.</string>
    <string name="validation_title_digits_only">Title must be an alphanumeric value.</string>
    <string name="validation_description_empty">Description must not be empty.</string>
    <string name="validation_description_digits_only">Description must be an alphanumeric value.</string>
    <string name="validation_due_date_smaller">Due date must be greater than inception date.</string>
</resources>